gaussian simulations varying n per distribution

--- a/notebooks/simulations/gaussian-simulations-no-hiearchy.ipynb
+++ b/notebooks/simulations/gaussian-simulations-no-hiearchy.ipynb
@@ -651,7 +651,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hc",
+   "display_name": "Hierarchical",
    "language": "python",
    "name": "hc"
   },
