--- a/notebooks/simulations/gaussian-simulations.ipynb
+++ b/notebooks/simulations/gaussian-simulations.ipynb
@@ -846,7 +846,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Hierarchical",
+   "display_name": "hc",
    "language": "python",
    "name": "hc"
   },
