--- a/notebooks/real-data/cifar-paper-experiments/evaluate-accuracy.ipynb
+++ b/notebooks/real-data/cifar-paper-experiments/evaluate-accuracy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,67 +23,6 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "class HierarchicalForest:\n",
-    "    def __init__(self, n_estimators_coarse=25, n_estimators_fine=10, max_depth=10):\n",
-    "        self.n_estimators_coarse=n_estimators_coarse\n",
-    "        self.coarse_forest=None\n",
-    "        \n",
-    "        self.n_estimators_fine=n_estimators_fine\n",
-    "        self.fine_forests={}\n",
-    "        \n",
-    "        self.max_depth=max_depth\n",
-    "        \n",
-    "        self.fitted=False\n",
-    "        \n",
-    "    def fit(self, X, y, fine_to_coarse):\n",
-    "        self.fine_to_coarse = fine_to_coarse\n",
-    "        self.classes = np.unique(y)\n",
-    "        self.coarse_labels = np.unique(fine_to_coarse)\n",
-    "        \n",
-    "        \n",
-    "        y_coarse=np.zeros(len(y))\n",
-    "        for coarse_label in self.coarse_labels:\n",
-    "            temp_fine_indices = np.where(fine_to_coarse == coarse_label)[0]\n",
-    "            temp_indices = np.concatenate([np.where(y == self.classes[tfi])[0] for tfi in temp_fine_indices])\n",
-    "            \n",
-    "            y_coarse[temp_indices] = coarse_label\n",
-    "            \n",
-    "        self._fit_coarse(X, y_coarse)\n",
-    "        self._fit_fine(X, y, y_coarse)\n",
-    "        \n",
-    "        self.fitted=True\n",
-    "        \n",
-    "        \n",
-    "    def _fit_coarse(self, X, y_coarse):\n",
-    "        self.coarse_forest = UF(n_estimators=self.n_estimators_coarse, max_depth=self.max_depth).fit(X, y_coarse)\n",
-    "    \n",
-    "    \n",
-    "    def _fit_fine(self, X, y, y_coarse):\n",
-    "        for coarse_label in self.coarse_labels:\n",
-    "            temp_indices = np.where(y_coarse == coarse_label)[0]\n",
-    "            print(np.unique(y[temp_indices]))\n",
-    "            self.fine_forests[coarse_label] = UF(n_estimators=self.n_estimators_fine, max_depth=self.max_depth\n",
-    "                                                ).fit(X[temp_indices], y[temp_indices])\n",
-    "            \n",
-    "    def predict_proba(self, X):\n",
-    "        posteriors = np.zeros((X.shape[0], len(self.classes)))\n",
-    "        coarse_posteriors = self.coarse_forest.predict_proba(X, 0)\n",
-    "        \n",
-    "\n",
-    "        #- Hierarchical posteriors & prediction\n",
-    "        for i, coarse_label in enumerate(self.coarse_labels):\n",
-    "            temp_fine_label_indices = np.where(self.fine_to_coarse == coarse_label)[0]\n",
-    "\n",
-    "            temp_fine_posteriors = self.fine_forests[coarse_label].predict_proba(X, 0)\n",
-    "            posteriors[:, temp_fine_label_indices] = np.multiply(coarse_posteriors[:, i],\n",
-    "                                                                         temp_fine_posteriors.T\n",
-    "                                                                        ).T\n",
-    "        \n",
-    "        return posteriors\n",
-    "    \n",
-    "    def predict(self, X):\n",
-    "        return np.argmax(self.predict_proba(X), axis=1)\n",
-    "        \n",
     "\n",
     "def get_accuracy(seed, fine_to_coarse, n_trees_coarse, n_trees_fine, max_depth):\n",
     "    \n",
@@ -101,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,26 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-81-458eb3fd3c1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     46\u001b[0m \u001b[0mcondensed_func\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mget_accuracy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 48\u001b[0;31m \u001b[0maccuracies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mParallel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mn_cores\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdelayed\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcondensed_func\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtupl\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtupl\u001b[0m \u001b[0;32min\u001b[0m \u001b[0maccuracy_tuples\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/venvs/hc/lib/python3.6/site-packages/joblib/parallel.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, iterable)\u001b[0m\n\u001b[1;32m   1059\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1060\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_backend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mretrieval_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1061\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mretrieve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1062\u001b[0m             \u001b[0;31m# Make sure that we get a last message telling us we are done\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1063\u001b[0m             \u001b[0melapsed_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_start_time\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/venvs/hc/lib/python3.6/site-packages/joblib/parallel.py\u001b[0m in \u001b[0;36mretrieve\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    938\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    939\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_backend\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'supports_timeout'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 940\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_output\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    941\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    942\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_output\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/venvs/hc/lib/python3.6/site-packages/joblib/_parallel_backends.py\u001b[0m in \u001b[0;36mwrap_future_result\u001b[0;34m(future, timeout)\u001b[0m\n\u001b[1;32m    540\u001b[0m         AsyncResults.get from multiprocessing.\"\"\"\n\u001b[1;32m    541\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 542\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfuture\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    543\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mCfTimeoutError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    544\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTimeoutError\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.6/concurrent/futures/_base.py\u001b[0m in \u001b[0;36mresult\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    425\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__get_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    426\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 427\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_condition\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    428\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    429\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_state\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mCANCELLED\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCANCELLED_AND_NOTIFIED\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.6/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    293\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m    \u001b[0;31m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    294\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 295\u001b[0;31m                 \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    296\u001b[0m                 \u001b[0mgotit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    297\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_mc=10\n",
     "master_seed = 42\n",
@@ -293,7 +215,7 @@
     "\n",
     "\n",
     "        #- Hierarchical forest trained using cond mean clusters\n",
-    "        accuracy_tuples.append((seeds[i], pair_of_clusters[1], n_trees_coarse, n_trees_fine, max_depth))\n",
+    "        accuracy_tuples.append((seeds[i], pair_of_clusters[1], n_trees_coarse, n_trees_fine, md))\n",
     "\n",
     "        #- Hierarchical forest trained using random clusters with the same structure as the cond mean clusters\n",
     "        accuracy_tuples.append((seeds[i], \n",
@@ -310,51 +232,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0\n",
-      "1 0\n",
-      "2 0\n",
-      "0 1\n",
-      "1 1\n",
-      "2 1\n",
-      "0 2\n",
-      "1 2\n",
-      "2 2\n",
-      "0 3\n",
-      "1 3\n",
-      "2 3\n",
-      "0 4\n",
-      "1 4\n",
-      "2 4\n",
-      "0 5\n",
-      "1 5\n",
-      "2 5\n",
-      "0 6\n",
-      "1 6\n",
-      "2 6\n",
-      "0 7\n",
-      "1 7\n",
-      "2 7\n",
-      "0 8\n",
-      "1 8\n",
-      "2 8\n",
-      "0 9\n",
-      "1 9\n",
-      "2 9\n",
-      "(mean, std err) tasksim accuracy 72.5 13.685454565584099\n",
-      "(mean, std err) random tasksim accuracy 73.5 13.685454565584099\n",
-      "(mean, std err) condmean accuracy 74.5 13.685454565584099\n",
-      "(mean, std err) random condmean accuracy 75.5 13.685454565584099\n",
-      "(mean, std err) flat accuracy 76.5 13.685454565584099\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tasksim_accuracies = np.zeros((len(max_depths), n_mc))\n",
     "random_tasksim_accuracies = np.zeros((len(max_depths), n_mc))\n",
@@ -381,6 +261,13 @@
     "print(\"(mean, std err) random condmean accuracy\", np.mean(random_condmean_accuracies), np.std(random_condmean_accuracies) / np.sqrt(n_mc))\n",
     "print(\"(mean, std err) flat accuracy\", np.mean(flat_accuracies), np.std(flat_accuracies) / np.sqrt(n_mc))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
