chaning to new machine

--- a/notebooks/simulations/gaussian-simulations.ipynb
+++ b/notebooks/simulations/gaussian-simulations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,9 +846,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hc",
+   "display_name": "bci",
    "language": "python",
-   "name": "hc"
+   "name": "bci"
   },
   "language_info": {
    "codemirror_mode": {
